--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -12,6 +12,14 @@
 						</tr>
 					</table>
 				</li>
+				<li ng-if="account.user.permissions.GLOBAL" ng-click="navigation.link('/profile')" ng-class="{'nav-active': (navigation.page == 'profile')}">
+					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+						<tr>
+							<td class="side-menu-icon"><i class="fa fa-user"></i></td>
+							<td class="side-menu-label">Profile</a></td>
+						</tr>
+					</table>
+				</li>
 				<li ng-click="navigation.link('/drivers/orders')" ng-class="{'nav-active': (navigation.page == 'drivers-orders')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
