--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -38,6 +38,7 @@
 <script src="/assets/cockpit/js/controllers.settlement.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.restaurants.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.customer.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.maps.js?v=<?=Cana_Util::gitVersion()?>"></script>
 
 <!-- AngularJS Filters -->
 <script src="/assets/js/filters.js?v=<?=Cana_Util::gitVersion()?>"></script>
