--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -574,6 +574,7 @@ html[xmlns] .clearfix {
 	text-decoration:none;
 	color:#fff;
 	text-indent:20px;
+	cursor: pointer;
 }
 .snap-drawer p {
 	opacity:0.5;
