--- a/include/views/default/cockpit2/layout/html.phtml
+++ b/include/views/default/cockpit2/layout/html.phtml
@@ -8,4 +8,5 @@
 
 <?=$this->display('layout/html.bottom')?>
 
-<script src="//maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=***REMOVED***"></script>
+<script src="//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+<? /* &key=***REMOVED*** */ ?>
