--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-list.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-list.phtml
@@ -1,11 +1,17 @@
-<div class="content-padding">
-	<div  ng-controller="SideChatCtrl">
+<div class="tickets-side-list">
+	<div ng-controller="SideChatCtrl">
 		<div ng-if="account.user.permissions.GLOBAL">
-			<div ng-repeat="ticket in tickets" class="side-support-ticket">
-				<b>{{ticket.name}}</b>
-				#{{ticket.id_support}}
-				{{ticket.message}}
-				
+			<h1>Tickets</h1>
+			<div class="tickets-side-tickets">
+				<div ng-repeat="ticket in tickets" class="tickets-side-item">
+					
+					<a href="#" class="tickets-side-ticket">#{{ticket.id_support}}</a>
+					<span class="tickets-side-time">10 m ago</span>
+					<div class="divider"></div>
+					<br>
+					<span class="tickets-side-name">{{ticket.name}}: </span>
+					<span class="tickets-side-message">{{ticket.message}}</span>
+				</div>
 			</div>
 		</div>
 
