Updated some ux for driver payment info

--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment-info-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment-info-form.phtml
@@ -19,7 +19,7 @@
 				</li>
 				<li class="li-input" ng-class="{'error':formBasic.basicSocialSecurityNumber.$invalid}">
 					<div class="label">Social Security Number:</div>
-					<div class="input"><input type="text" name="basicSocialSecurityNumber" ng-model="basicInfo.social_security_number" required placeholder="Social Security Number" social-security-number-validate ng-maxlength="15"></div>
+					<div class="input"><input type="tel" name="basicSocialSecurityNumber" ng-model="basicInfo.social_security_number" required placeholder="Social Security Number" social-security-number-validate ng-maxlength="15"></div>
 					<div class="box-error">
 						<small ng-show="formBasic.basicSocialSecurityNumber.$error.required">Required.</small>
 						<small ng-show="formBasic.basicSocialSecurityNumber.$error.socialSecurityNumberValidate">Invalid Social Security Number. Please use the format: XXX-XX-XXXX.</small>
@@ -53,14 +53,14 @@
 			<ul ng-class="{'submitted':bankSubmitted}" ng-show="bank.showForm">
 				<li class="li-input" ng-class="{'error':formBank.accountNumber.$invalid}">
 					<div class="label">Account Number:</div>
-					<div class="input"><input type="text" name="accountNumber" ng-model="bank.account_number" required></div>
+					<div class="input"><input type="tel" name="accountNumber" ng-model="bank.account_number" required></div>
 					<div class="box-error">
 						<small ng-show="formBank.accountNumber.$error.required">Required.</small>
 					</div>
 				</li>
 				<li class="li-input" ng-class="{'error':formBank.routingNumber.$invalid}">
 					<div class="label">Routing Number:</div>
-					<div class="input"><input type="text" name="routingNumber" ng-model="bank.routing_number" required></div>
+					<div class="input"><input type="tel" name="routingNumber" ng-model="bank.routing_number" required></div>
 					<div class="box-error">
 						<small ng-show="formBank.routingNumber.$error.required">Required.</small>
 					</div>
