--- a/include/views/mail/crunchbutton/driver/notification/access.phtml
+++ b/include/views/mail/crunchbutton/driver/notification/access.phtml
@@ -12,6 +12,8 @@
 	Username: <?php echo $login ?>
 	<br/>
 	Password: <?php echo $pass ?>
+	<br/>
+	Url: <a href="http://cockpit.la/">http://cockpit.la/</a>
 </p>
 <p>
 	Test this URL out on your phone (exactly as it appears, no www.) <a href="<?php echo $url; ?>">cockpit.la/<?php echo $id_order; ?></a>. Play around with it and make sure you understand how everything works.
