--- a/include/views/default/cockpit/community/community/index.phtml
+++ b/include/views/default/cockpit/community/community/index.phtml
@@ -230,7 +230,7 @@ community.quickClose = function( id_restaurant, status ){
 			if( request.success ){
 				community.restaurants();
 			} else {
-				alert( 'Oops, error! Please try again!' );
+				alert( 'Oops! Please try again!' );
 			}
 		}
 	} );
