--- a/include/views/default/cockpit/drivers/deliveries/index.phtml
+++ b/include/views/default/cockpit/drivers/deliveries/index.phtml
@@ -210,7 +210,7 @@ deliveries.assign = function(){
 			$( '#modal-hours' ).modal( 'hide' );
 			deliveries.load();
 		} else {
-			alert( 'Ops, error! ' + data.error );
+			alert( 'Oops! ' + data.error );
 		}
 	} );
 
