--- a/include/views/default/cockpit/drivers/hours/index.phtml
+++ b/include/views/default/cockpit/drivers/hours/index.phtml
@@ -197,7 +197,7 @@ workingHours.copyAll = function(){
 			if( data.success ){
 				location.reload();
 			} else {
-				alert( 'Ops, error! ' + data.error );
+				alert( 'Oops! ' + data.error );
 			}
 		} );
 	}
@@ -243,7 +243,7 @@ workingHours.add = function(){
 		if( data.success ){
 			location.reload();
 		} else {
-			alert( 'Ops, error! ' + data.error );
+			alert( 'Oops! ' + data.error );
 		}
 	} );
 };
@@ -273,7 +273,7 @@ workingHours.edit = function(){
 		if( data.success ){
 			location.reload();
 		} else {
-			alert( 'Ops, error! ' + data.error );
+			alert( 'Oops! ' + data.error );
 		}
 	} );
 };
@@ -289,7 +289,7 @@ workingHours.copy = function(){
 			if( data.success ){
 				location.reload();
 			} else {
-				alert( 'Ops, error! ' + data.error );
+				alert( 'Oops! ' + data.error );
 			}
 		} );
 	}
@@ -306,7 +306,7 @@ workingHours.remove = function(){
 			if( data.success ){
 				location.reload();
 			} else {
-				alert( 'Ops, error! ' + data.error );
+				alert( 'Oops! ' + data.error );
 			}
 		} );
 	}
