--- a/include/views/default/cockpit/giftcards/giftcard.phtml
+++ b/include/views/default/cockpit/giftcards/giftcard.phtml
@@ -320,7 +320,7 @@ $(function() {
 				}
 			},
 			error: function( ){
-				alert( 'Oops, error!' );
+				alert( 'Oops!' );
 			}
 		});
 	} );
@@ -344,7 +344,7 @@ $(function() {
 				}
 			},
 			error: function( ){
-				alert( 'Oops, error!' );
+				alert( 'Oops!' );
 			}
 		});
 	} );
