--- a/include/views/default/cockpit/support/support.phtml
+++ b/include/views/default/cockpit/support/support.phtml
@@ -93,7 +93,7 @@ function saveName(){
 			if( json.success ){
 				window.location.reload();
 			} else{
-				alert( 'Oops, error!' );
+				alert( 'Oops!' );
 			}
 			
 		}
