--- a/include/views/default/crunchbutton/frontend/giftcard.phtml
+++ b/include/views/default/crunchbutton/frontend/giftcard.phtml
@@ -7,7 +7,7 @@
 
 	<!-- Error -->
 	<div ng-show="modal.error && !modal.success">
-		<h1>Oops, error!</h1>
+		<h1>Oops!</h1>
 		<div class="error" ng-show="modal.error == 'used'">
 			Sorry, this gift card was already used.
 		</div>
