--- a/include/views/default/quick/orders/index.phtml
+++ b/include/views/default/quick/orders/index.phtml
@@ -126,7 +126,7 @@ $hours = $this->hours;
 			 		if( json[ 'delivery-status' ].accepted.name ){
 			 			var name = 'by ' + json[ 'delivery-status' ].accepted.name;
 			 		}
-			 		alert( 'Ops, error!\n It seems this order was already accepted ' + name + '!'  );
+			 		alert( 'Opos!\n It seems this order was already accepted ' + name + '!'  );
 			 		location.reload();	
 			 	}
 			 }, 'json' ); 
