--- a/include/views/default/cockpit/drivers/assign/driver.phtml
+++ b/include/views/default/cockpit/drivers/assign/driver.phtml
@@ -77,7 +77,7 @@ assign.save = function(){
 			alert( 'Saved!' );
 			location.reload();
 		} else {
-			alert( 'Ops, error! ' + data.error );
+			alert( 'Oops! ' + data.error );
 		}
 	} );
 };
