--- a/include/views/default/cockpit/drivers/assign/restaurant.phtml
+++ b/include/views/default/cockpit/drivers/assign/restaurant.phtml
@@ -68,7 +68,7 @@ assign.save = function(){
 			alert( 'Saved!' );
 			location.reload();
 		} else {
-			alert( 'Ops, error! ' + data.error );
+			alert( 'Oops! ' + data.error );
 		}
 	} );
 };
