--- a/include/views/default/crunchbutton/layout/html.bottom.phtml
+++ b/include/views/default/crunchbutton/layout/html.bottom.phtml
@@ -87,6 +87,7 @@ $(function() {
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 		ga('create', 'UA-36135548-1', 'crunchbutton.com');
 		ga('require', 'ecommerce', 'ecommerce.js');
-		ga('send', 'pageview');	
+		ga('require', 'displayfeatures');
+		ga('send', 'pageview');
 	</script>
 <? endif ; ?>
