--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment-info-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment-info-form.phtml
@@ -35,7 +35,7 @@
 					</div>
 				</li>
 				<li class="li-input">
-					* After save this form you will have to enter your Bank Account information.
+					* After saving this form, you'll need to enter your Bank Account information below so we can pay you
 					<br/><br/>
 					<button class="button green" ng-click="save_basic_info();">Save</button>
 				</li>
