--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -170,7 +170,11 @@
 						</ul>
 					</div>
 
-					<button class="button lightorange restaurant-items-toggle" ng-click="fullmenu=1">more food</button>
+					<p class="center-text">
+						<div class="more-food-link restaurant-items-toggle" ng-click="fullmenu=1">more food</div>
+					</p>
+
+
 				</div>
 
 			</div>
